monitoring/mysqld-exporter-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysqld-exporter
  namespace: monitoring
spec:
  selector:
    app: mysqld-exporter
  ports:
  - port: 9104
    targetPort: 9104
